Html / CSS vitrine
so gooood

--- a/vitrine-accueil.html
+++ b/vitrine-accueil.html
@@ -2,10 +2,27 @@
 <html>
     <head>
         <link rel="stylesheet" href="style/vitrine.css">
-        <title>Hello World - HTML</title>
+        <title>ISCC</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <p>zieubgf</p>
+        <header>
+            <div class="align">
+            <h1>Summer Code Camp</h1>
+            </div>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="vitrine-accueil.html">Accueil</a></li>
+                    <li><a href="vitrine-programme.html">Programme</a></li>
+                    <li><a href="vitrine-contacts.html">Contacts</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <p>ggg</p>
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
