--- a/vitrine-accueil.html
+++ b/vitrine-accueil.html
@@ -12,17 +12,26 @@
             </div>
             <nav class="navigation">
                 <ul>
-                    <li><a href="vitrine-accueil.html">Accueil</a></li>
+                    <li class="en-cours"><a href="vitrine-accueil.html">Accueil</a></li>
                     <li><a href="vitrine-programme.html">Programme</a></li>
                     <li><a href="vitrine-contacts.html">Contacts</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <p>ggg</p>
+            <h2>Accueil</h2>
+            <p><i>Le numérique, nouvelle ère de l’humanité, source d’innovation et de performance ?</i> Pour mieux comprendre cette révolution, venez apprendre les rudiments du code et découvrir les bases de la programmation des sites internet. Destiné aux étudiants, ce code camp vous initiera en un mois aux principaux langages de programmation
+                Web (HTML-CSS et PHP), vous dévoilera le fonctionnement d’outils comme Google ou Paypal et vous éclaira sur la sécurité des sites internet.
+            </p>
+            <div class="images">
+                <img src="style/epitech-ecole.jpeg" alt="epitech ecole">
+                <img src="style/epitech-hack.jpeg" alt="hacked">
+            </div>
         </main>
         <footer>
-
+            <a href="http://www.epitech.eu">
+            <img class="image" src="style/logo_epitech.png" alt="image logo epitech">
+            </a>
         </footer>
     </body>
 </html>
